--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,9 @@ body {
   font-family: 'Roboto Slab', serif;
   color: #545454;
 }
+h4 {
+  font-weight: 800;
+}
 
 p {
   font-family: 'Lato', sans-serif;
